--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -1,29 +1,43 @@
 [package]
-name = "os"
-version = "0.1.0"
 authors = ["Campbell He <hkp18@mails.tsinghua.edu.cn>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+name = "os"
+version = "0.1.0"
 [dependencies]
+array-init = "2.0.0"
 bitflags = "1.2.1"
 buddy_system_allocator = "0.6"
-lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
-log = "0.4"
-riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
-    "inline-asm",
-] }
-spin = "0.9"
-xmas-elf = "0.7.0"
-rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
-uart8250 = { version = "*", features = ["fmt"], optional = true }
-uart_xilinx = { version = "*", features = ["fmt"], optional = true }
 embedded-hal = "1.0.0-alpha.4"
-nb = "1.0.0"
-array-init = "2.0.0"
 heapless = "0.7.5"
+log = "0.4"
+nb = "1.0.0"
+spin = "0.9"
+woke = "0.0.2"
+xmas-elf = "0.7.0"
+
+[dependencies.lazy_static]
+features = ["spin_no_std"]
+version = "1.4.0"
+
+[dependencies.riscv]
+branch = "extN"
+features = ["inline-asm"]
+git = "https://github.com/duskmoon314/riscv"
+
+[dependencies.rv-plic]
+git = "https://github.com/duskmoon314/rv-plic"
+
+[dependencies.uart8250]
+features = ["fmt"]
+optional = true
+version = "*"
+
+[dependencies.uart_xilinx]
+features = ["fmt"]
+optional = true
+version = "*"
 
 [features]
-board_qemu = ["uart8250"]
 board_lrv = ["uart_xilinx"]
+board_qemu = ["uart8250"]
+emu = ["uart8250"]
